# ssep

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
cloudbuild/: deploy-all.yaml
mobile-app/: index.tsx  package.json  tsconfig.json
mobile-app/src/hooks/: useSSEPData.ts
mobile-app/src/navigation/: AppNavigator.tsx
mobile-app/src/screens/: DashboardScreen.tsx
mobile-app/src/services/: SSEPService.ts
monitoring/: main.tf  variables.tf
scripts/: deploy.ps1  deploy.sh
services/crowd-flow/: Dockerfile  main.py  requirements.txt  test_main.py
services/gate-entry/: Dockerfile  main.py  requirements.txt  test_main.py
services/incident-manager/: Dockerfile  main.py  test_main.py
services/navigation/: Dockerfile  go.mod  go.sum  main.go  venue_graph.json
services/notification/: Dockerfile  main.py  requirements.txt  test_main.py
services/order-deliver/: Dockerfile  main.py  test_main.py
services/queue-predictor/: Dockerfile  main.py  requirements.txt  test_main.py
shared/proto/: events.proto
shared/python-libs/: pyproject.toml
shared/python-libs/ssep_common/: __init__.py  logging_config.py
terraform/: main.tf  variables.tf
terraform/environments/dev/: main.tf  variables.tf
terraform/environments/prod/: main.tf
terraform/modules/cloud-run/: main.tf
terraform/modules/firestore/: main.tf
terraform/modules/iam/: main.tf
terraform/modules/pubsub/: main.tf  variables.tf
terraform/modules/redis/: main.tf  variables.tf
tests/integration/: test_pipeline.py
